<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Lottie Background -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        app:lottie_rawRes="@raw/bg_animation"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_ignoreDisabledSystemAnimations="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Overlay UI container -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:fillViewport="true"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <!-- Logo -->
            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="150dp"
                android:layout_height="160dp"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/app_logo"
                android:scaleType="centerInside"
                android:src="@drawable/logokoby"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!-- Benvenuto -->
            <TextView
                android:id="@+id/textWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benvenuto"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                android:textColor="?attr/colorPrimary"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/imageLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hintEmail"
                android:layout_marginTop="24dp"
                app:boxStrokeColor="@color/md_theme_onSurface"
                app:layout_constraintTop_toBottomOf="@id/textWelcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmail"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hintPassword"
                android:layout_marginTop="12dp"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@id/emailLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPassword"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Login -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/loginButton"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Google Login -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginGoogle"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/google_login"
                app:icon="@drawable/googleg_standard_color_18"
                app:layout_constraintTop_toBottomOf="@id/buttonLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Link: registrazione -->
            <TextView
                android:id="@+id/textRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/loginNoAccount"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/loginGoogle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
